CCMSPUI-788 | Added query to validation errors API endpoint to get all errors for a submission
