# laa-submit-a-bulk-claim-ui/src/main/java/uk/gov/justice/laa/bulkclaim/dto/summary/SubmissionSummaryClaimError.java
@@ -1,8 +1,11 @@
 package uk.gov.justice.laa.bulkclaim.dto.summary;
 
+import java.util.UUID;
+
 /**
  * A record representing a claim error in a bulk submission.
  *
+ * @param submissionReference the submission reference
  * @param ufn the UFN of the claim
  * @param ucn the UCN of the claim
  * @param client the client of the claim
@@ -10,4 +13,4 @@ package uk.gov.justice.laa.bulkclaim.dto.summary;
  * @author Jamie Briggs
  */
 public record SubmissionSummaryClaimError(
-    String ufn, String ucn, String client, String errorDescription) {}
+    UUID submissionReference, String ufn, String ucn, String client, String errorDescription) {}
